--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -11,12 +11,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
+    
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 20
@@ -26,3 +25,45 @@ jobs:
         distribution: 'temurin'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
+  test:
+    runs-on: ubuntu-latest
+    
+    steps: 
+      - uses: actions/checkout@v3 
+      - name: Set up JDK 20 
+        uses: actions/setup-java@v3 
+        with:
+          java-version: '20' 
+          distribution: 'temurin' 
+          cache: maven
+      - name: Run Test with Maven 
+        run: mvn -B test
+      
+  sonar: 
+      needs: test 
+      runs-on: ubuntu-latest
+      steps: 
+        - uses: actions/checkout@v3 
+        - name: Set up JDK 20 
+          uses: actions/setup-java@v3 
+          with:
+            java-version: '20' 
+            distribution: 'temurin' 
+            cache: maven
+        - name: Cache SonarCloud packages 
+          uses: actions/cache@v3 
+          with: 
+            path: ~/.sonar/cache 
+            key: ${{ runner.os }}-sonar 
+            restore-keys: ${{ runner.os }}-sonar
+        - name: Cache Maven packages 
+          uses: actions/cache@v3 
+          with: 
+            path: ~/.m2 
+            key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }} 
+            restore-keys: ${{ runner.os }}-m2
+        - name: Build and analyze on SonarCloud ATA/S-EPAT/CIWorkshop/v3.6 32NICF – Essential Practices for Agile Teams 
+          env: 
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar Dsonar.projectKey=darryl1975_cicd-demo 
