--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,6 +8,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+    types: [opened, synchronize, reopened]
 
 jobs:
  
@@ -67,4 +68,4 @@ jobs:
           env: 
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar Dsonar.projectKey=kokyawlin_cicd-demo 
+          run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar Dsonar.projectKey=kokyawlin_cicd-demo
