--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -66,6 +66,6 @@ jobs:
             restore-keys: ${{ runner.os }}-m2
         - name: Build and analyze on SonarCloud ATA/S-EPAT/CIWorkshop/v3.7 32NICF – Essential Practices for Agile Teams 
           env: 
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+            GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar Dsonar.projectKey=kokyawlin_cicd-demo
