--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>CICD Demo project for Spring Boot</description>
 	<properties>
 		<java.version>20</java.version>
-		<sonar.organization>kokyawlin</sonar.organization>
+		<sonar.organization>kokyawlin-cicd-demo</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
