--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -77,11 +77,12 @@ jobs:
         - uses: actions/checkout@v3
         - name: Run Snyk to check for vulnerabilities
           uses: snyk/actions/maven@master
+        - name: Snyk Code test
+          run: snyk code test --sarif > snyk-code.sarif
           continue-on-error: true # To make sure that SARIF upload gets called
           env:
             SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-          with:
-            args: --sarif-file-output=snyk.sarif
+          
         - name: Upload result to GitHub Code Scanning
           uses: github/codeql-action/upload-sarif@v2
           with:
