--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -76,7 +76,7 @@ jobs:
     steps:
      - uses: actions/checkout@master
      - name: Run Snyk to check for vulnerabilities
-       uses: snyk/actions/maven@master
+       uses: snyk/actions/maven-3-jdk-20@master
        continue-on-error: true # To make sure that SARIF upload gets called
        env:
          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
