--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -81,8 +81,8 @@ jobs:
        env:
          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
        with:
-         args: --sarif-file-output=snyk.sarif
-         run: chmod +x mvnw
+         args: --sarif-file-output=snyk.sarif -d
+         
      - name: Upload result to GitHub Code Scanning
        uses: github/codeql-action/upload-sarif@v2
        with:
