--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -83,7 +83,7 @@ jobs:
        with:
          args: --sarif-file-output=snyk.sarif -d
          
-     - name: Upload result to GitHub Code Scanning
-       uses: github/codeql-action/upload-sarif@v2
-       with:
-         sarif_file: snyk.sarif
+    # - name: Upload result to GitHub Code Scanning
+     #  uses: github/codeql-action/upload-sarif@v2
+    #   with:
+      #   sarif_file: snyk.sarif
