--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,7 @@
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
-					</execution> <!--
-					attached to Maven test phase -->
+					</execution>
 					<execution>
 						<id>report</id>
 						<phase>test</phase>
@@ -70,12 +69,7 @@
 					</image>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>io.snyk</groupId>
-				<artifactId>snyk-maven-plugin</artifactId>
-				<version>2.2.0</version>
-				<inherited>false</inherited>
-			</plugin>
+			
 		</plugins>
 	</build>
 
